--- a/index.html
+++ b/index.html
@@ -128,6 +128,6 @@
     </div>
 
     <script src="/dist/index.umd.js"></script>
-    <script src="/examples/examples.js"></script>
+    <script src="examples.js"></script>
   </body>
 </html>
